<resources>
    <string name="app_name">Cloze2</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_map">MAP</string>
    <string name="title_search">SEARCH</string>
    <string name="title_promotion">PROMOTIONS</string>
    <string name="title_setting">SETTINGS</string>

    <string name="facebook_app_id">2189220104645029</string>
    <string name="fb_login_protocol_scheme">fb2189220104645029</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
