<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_promo"
        android:icon="@drawable/success"
        android:title="@string/title_promotion" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/title_setting" />


</menu>
